# compsync

./: .gitignore  MANIFEST.in  README.md  install-local.sh  install.ps1  pyproject.toml  uninstall-local.sh
.github/workflows/: release-deb.yml  test-suite.yml
debian/: changelog  compsync.sh  control  copyright  rules
homebrew/: README.md  compsync.rb
scoop/: README.md  compsync.json
scripts/: compsync.sh  merge-json.py
src/compsync/: __init__.py
tests/: test-compsync.sh  test-merge-json.py
